<resources>
    <string name="app_name">Cafetines UES</string>
    <string name="lbl_inicia_sesion">Inicia sesión para hacer tu pedido</string>
    <string name="lbl_username">Correo Institucional</string>
    <string name="lbl_pass">Contraseña</string>
    <string name="lbl_btnIniciar">Iniciar Sesión</string>
    <string name="lbl_crearCuenta">¿No tienes cuenta? Regístrate.</string>
    <string name="lbl_email_ej">usuario@ues.edu.sv</string>
    <string name="hint_password">**********</string>
    <string name="lbl_admin">Administrador</string>
    <string name="lbl_encargado">Encargado</string>


    <string name="lbl_crear_cuenta">Crear cuenta</string>
    <string name="lbl_subtitulo_registro">Regístrate con tu correo institucional</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="hint_nombre">Nombre completo</string>
    <string name="lbl_carnet">Carnet</string>
    <string name="hint_carnet">AA12345</string>
    <string name="lbl_confirmar_password">Confirmar Contraseña</string>
    <string name="hint_confirmar_password">Confirmar contraseña</string>
    <string name="lbl_ubicacion">Seleccionar ubicación</string>
    <string name="lbl_btn_registrar">Regístrate</string>
    <string name="lbl_ir_login">¿Ya tienes cuenta? Inicia sesión</string>




    <!-- Gestion usuarios -->
    <string name="titulo_gestion_usuarios">Gestionar Usuarios</string>
    <string name="descripcion_usuarios">Administra accesos y permisos del sistema</string>
    <string name="buscar_usuario">Buscar Usuario...</string>

    <!-- Usuario ejemplo -->
    <string name="usuario_nombre">Usuario 1</string>
    <string name="usuario_info">usuario@ues.edu.sv | CARNET</string>
    <string name="usuario_rol">Rol: Admin</string>

    <string name="title_gestionar_locales">Gestionar Locales</string>
    <string name="lbl_indicacion_admin">Administrar los Cafetines registrados</string>
    <string name="btn_agregar_cafetin">+ Agregar Cafetín</string>
    <string name="lbl_ubicacion_prefix">Ubicación: </string>
    <string name="lbl_estado_activo">Estado: Activo</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="desc_volver">Volver</string>

    <string name="title_nuevo_local">Nuevo local</string>
    <string name="lbl_registro_cafetin">Registra un nuevo cafetín</string>
    <string name="hint_nombre_local">Nombre del local</string>
    <string name="hint_ubicacion">Ubicación</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="lbl_subir_imagen">Subir imagen</string>
    <string name="lbl_toca_subir_imagen">Toca para subir una imagen (opcional)</string>
    <string name="lbl_entrega_campus">Ofrece entrega en campus</string>
    <string name="lbl_estado">Estado</string>
    <string name="btn_guardar_local">Guardar local</string>



    <string name="gestionar_productos">Gestionar Productos</string>
    <string name="cafetin_seleccionado">Cafetín Seleccionado</string>
    <string name="agregar_producto">+ Agregar Producto</string>


    <string name="eliminar">Eliminar</string>

    <string name="producto_pupusas">Pupusas</string>
    <string name="precio_producto">$0.75</string>
    <string name="estado_disponible">Disponible</string>

    <string name="volver">Volver</string>
    <string name="imagen_producto">Imagen del producto</string>
    <!-- Botones -->
    <string name="editar">Editar</string>

    <!-- BIENVENIDA -->
    <string name="tv_saludo">Hola, Usuario</string>
    <string name="tv_pregunta">¿Qué deseas pedir hoy?</string>
    <string name="tv_destacados">Locales destacados</string>
    <string name="tv_locales">Locales</string>

    <!-- BOTONES PRINCIPALES -->
    <string name="btnVerLocales">Ver locales</string>
    <string name="btn_mis_pedidos">Mis pedidos</string>
    <string name="btn_pedido_especial">Pedido especial</string>
    <string name="btnCerrarSesion">Cerrar sesión</string>


    <!-- GENERALES -->

    <string name="carrito">Carrito</string>

    <!-- PRODUCTOS -->
    <string name="productos">Productos</string>
    <string name="cafetin_central">Cafetín Central</string>

    <string name="selecciona_productos">
        Selecciona los productos que deseas agregar
    </string>

    <string name="pupusas">Pupusas</string>

    <string name="antojito">Antojito</string>


    <string name="ver_carrito">Ver carrito</string>


    <string name="producto">Producto</string>

    <string name="disponible">Disponible</string>
    <string name="agregar">Agregar</string>






    <!-- LOCALES -->
    <string name="tv_local_1">Cafetín Central</string>
    <string name="tv_local_2">Cafetín Ingeniería</string>

    <string name="tv_menu">Ver menú</string>

    <string name="btnLocalCentral">Cafetín Central</string>
    <string name="btnLocalIngenieria">Cafetín Ingeniería</string>
    <string-array name="Listlocales">
        <item>Local Central</item>
        <item>Local Ingeniería</item>
    </string-array>

    <string-array name="estados_local">
        <item>Activo</item>
        <item>No activo</item>
    </string-array>

    <string-array name="tipos_prod">
        <item>Antojito</item>
        <item>Desayuno</item>
    </string-array>
</resources>