<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ScrollView
        android:id="@+id/scrollRegistro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/lblTituloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_crear_cuenta"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/lblSubtituloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_subtitulo_registro"
                android:gravity="center"
                android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nombre"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <TextView
                android:id="@+id/lblCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_username"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_email_ej"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <TextView
                android:id="@+id/lblCarnet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_carnet"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/txtCarnet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_carnet"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <!-- CAMPO: CONTRASEÑA -->
            <TextView
                android:id="@+id/lblPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_pass"
                android:layout_marginBottom="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- CAMPO: CONFIRMAR CONTRASEÑA -->
            <TextView
                android:id="@+id/lblConfirmarPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_confirmar_password"
                android:layout_marginBottom="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirmar_password"
                    android:inputType="textPassword"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/lblUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_ubicacion"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/spUbicacion"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginBottom="24dp"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_btn_registrar"
                android:layout_marginBottom="16dp"
                android:padding="14dp"
                android:backgroundTint="@color/wine" />

            <TextView
                android:id="@+id/lblLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_ir_login"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#9B1B1B"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>